Fixed button touch issues on iOS

--- a/src/static/main.css
+++ b/src/static/main.css
@@ -37,6 +37,12 @@ div, p {
   font-weight: 600;
   margin: 20px;
   -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 }
 
 .button img {
